objects/Eligible_Entity__c.object
<CustomObject>
    <description>Joining object to associate an entity to a deployment or a release.  Tab created to allow rapid updates with enhanced lists</description>
    <fields>
        <fullName>Cluster__c</fullName>
        <description>Cluster from assoxiated Entity</description>
        <formula>Entity__r.Cluster__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment</label>
        <referenceTo>Deployment__c</referenceTo>
        <relationshipLabel>Eligible Entities</relationshipLabel>
        <relationshipName>Eligible_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Entities__c</referenceTo>
        <relationshipLabel>Eligible Entities</relationshipLabel>
        <relationshipName>Eligible_Entity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GoLiveDate__c</fullName>
        <description>Go-live date of the eligible entity for a deployment or release</description>
        <inlineHelpText>Please enter the scheduled go-live date for the eligible entity</inlineHelpText>
        <label>Go-Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NbUsersDeployed__c</fullName>
        <description>Enter the actual number of users deployed</description>
        <inlineHelpText>Enter the actual number of users deployed</inlineHelpText>
        <label>Nb of Users Deployed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_of_Users__c</fullName>
        <description>Please enter the number of users concerned in the associated entity for the deployment or release</description>
        <inlineHelpText>Please enter the number of users concerned in the associated entity for the deployment or release</inlineHelpText>
        <label>Nb of Users</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Population__c</fullName>
        <description>Indicate the population concerned</description>
        <inlineHelpText>Indicate the population concerned</inlineHelpText>
        <label>Population</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PWR</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>BLD</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>PWR + IND</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links release to entities through joining object</description>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Eligible Entities</relationshipLabel>
        <relationshipName>Eligible_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Validates the status of the entity for the particular release or entity</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Eligible Entity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Project__c</columns>
        <columns>Entity__c</columns>
        <columns>Population__c</columns>
        <columns>Nb_of_Users__c</columns>
        <columns>NbUsersDeployed__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>EE-{0000}</displayFormat>
        <label>Eligible Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eligible Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>